Added new steps, added formatting

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,14 +1,20 @@
 name: Hello World!
 
 on:
-  push: 
-    branches: 
-      - master
+    push:
+        branches:
+            - master
 
 jobs:
-  say_hello:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Say hello
-        run: |
-          echo "Hello World!"
+    say_hello:
+        runs-on: ubuntu-20.04
+        steps:
+            - name: Say hello
+              run: |
+                  echo "Hello World!"
+            - name: Now it is
+              run: |
+                  date
+            - name: Directory content
+              run: |
+                  ls -l
